build: deploy site for gh_pages

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>Online Protobuf encoder/decoder</title>
-    <link rel="stylesheet" href="bower_components/normalize.css/normalize.css"/>
+    <link rel="stylesheet" href="css/vendor/normalize.css"/>
     <link rel="stylesheet" href="css/style.css"/>
 </head>
 <body>
@@ -32,7 +32,7 @@
         </label>
     </div>
 </section>
-<script src="bower_components/protobuf/dist/ProtoBuf.min.js"></script>
+<script src="js/vendor/protobuf.min.js"></script>
 <script src="js/frontend.js"></script>
 </body>
 </html>
